--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ignatus-anim.github.io/",
+  "homepage": "https://ignatus-anim.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
