--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ignatus-anim.github.io",
+  "homepage": "https://portfolio.ignatusanim.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && node copy-cname.js",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "node deploy.js"
   },
   "dependencies": {
     "jspdf": "^3.0.1",
